--- a/README.org
+++ b/README.org
@@ -133,6 +133,7 @@ that week, 11:59PM.
   - [[file:slides/07-hidden-markov-models.pdf][Slides]], [[https://cloud.r-project.org/web/packages/depmixS4/vignettes/depmixS4.pdf][depmixS4 vignette]] section 2. Markov Models, MLAPP-17.2. Hidden
     Markov Models, MLAPP-17.3-5. Learning for HMMs, MLAPP-17.5.
 - Oct 16, week 8: review and exam.
+  - no class Mon Oct 16.
   - [[file:exams/01-practice.org][Review questions for clustering]].
   - [[file:exams/02-practice.org][Review questions for change-point detection]].
   - Mid-term review Weds 18 Oct, exam Fri 20 Oct in class.
