--- a/exams/03-practice.org
+++ b/exams/03-practice.org
@@ -66,6 +66,7 @@
    
 Rubric: minus points for incomplete and/or off-topic responses.
 
-Volunteers to present solutions for extra credit during reading week.
+Volunteers to present solutions for extra credit during reading week: Cody, Trevor, Doris, Saisree
+
 For the real final exam, what would be the analogous questions for the other topics that we have studied?
 It will be open-note: during the real exam, you are allowed one sheet of paper, filled in with your own notes, in your own handwriting.
