--- a/slides/20-decision-trees.Rmd
+++ b/slides/20-decision-trees.Rmd
@@ -21,12 +21,12 @@ theme_set(my.theme)
 # TODO
 
 ```{r}
-N.col <- 5
+N.col <- 2
 N.row <- 200
 set.seed(1)
 X.mat <- matrix(runif(N.col*N.row), N.row, N.col)
 hidden <- (X.mat[,1]<0.4 & X.mat[,2]<0.5) |
-  (X.mat[,1] > 0.7 & X.mat[,3] > 0.4)
+  (X.mat[,1] > 0.7 & X.mat[,2] > 0.4)
 y.vec <- ifelse(hidden-0.5+rnorm(N.row,sd=0.5) < 0, 0, 1)
 table(y.vec, hidden)
 library(ggplot2)
@@ -129,7 +129,7 @@ grid.pred.list[["0"]] <- data.table(
   iteration=0,
   grid.dt,
   pred = dtree$predict(grid.mat))
-for(iteration in 1:5){
+for(iteration in 1:6){
   (term.best <- data.table(
     node.i=seq_along(term.list)
   )[
@@ -153,7 +153,7 @@ ggplot()+
     V1, V2, fill=y),
     shape=21,
     data=xy.dt)+
-  scale_fill_gradient(low="white",high="black")+
+  scale_fill_gradient2(low="blue",high="red",midpoint=0.5)+
   coord_equal()
 
 
